# ConnectCore

./: .gitignore  README.md  README_zh.md  __main__.py  config.json  mcdreforged.plugin.json  pyproject.toml  requirements.txt
.github/workflows/: package.yml
Test Environment/: StartTest.bat  StartTest.sh
certs/: server.crt  server.key  server.pem
connect_core/: __init__.py  aes_encrypt.py  cli_core.py  context.py  get_config_translate.py  init_config.py  log_system.py  module_initialization.py  rsa_encrypt.py  storage.py  tools.py
connect_core/account/: login_system.py  register_system.py
connect_core/api/: __init__.py
connect_core/api/account/: __init__.py
connect_core/api/c_t/: __init__.py
connect_core/api/cli_command/: __init__.py
connect_core/api/command_interface/: __init__.py
connect_core/api/config/: __init__.py
connect_core/api/control_interface/: __init__.py
connect_core/api/data_packet/: __init__.py
connect_core/api/http/: __init__.py
connect_core/api/interface/: __init__.py
connect_core/cli/: __init__.py  arguments.py  cli_core.py  cli_entry.py  command_core.py  commands.py  core_entry.py  create_key.py  debug_tools.py  get_config_translate.py  log_system.py  server_list.py  storage.py  tools.py
connect_core/http/: client.py  http_client.py  http_server.py  server.py
connect_core/https/: flask_server.py  http_client.py  http_server.py
connect_core/interface/: contol_interface.py  control_interface.py  get_interface.py
connect_core/mcdr/: command.py  commands.py  mcdr_entry.py
connect_core/plugin/: init_plugin.py  loader.py  sandbox.py
connect_core/tools/: __init__.py  base_config.py  common.py  json_file.py  self_read.py  tools.py
connect_core/websocket/: client.py  data_packet.py  server.py  websocket_client.py  websocket_server.py
connect_core/websockets/: client.py  data_packet.py  server.py
doc/: api.md  plugin_structure.md  websocket.md
lang/: en_us.yml  zh_cn.yml
tests/: __init__.py  conftest.py  test_aes_encrypt.py  test_base_config.py  test_context.py  test_data_packet.py  test_log_system.py  test_p2_enhancements.py
(+17 files in other folders)
