[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "connect-core"
version = "0.2.6"
description = "A Minecraft server interconnection plugin for MCDR and CLI"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{ name = "zhongbai233" }]
keywords = ["minecraft", "mcdr", "websocket", "server-interconnection"]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cryptography>=45.0",
    "packaging>=25.0",
    "prompt-toolkit>=3.0",
    "psutil>=7.0",
    "pydantic>=2.11",
    "PyYAML>=6.0",
    "requests>=2.32",
    "structlog>=24.0",
    "typing-extensions>=4.14",
    "websockets>=15.0",
]

[project.optional-dependencies]
mcdr = ["mcdreforged>=2.14"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/zhongbai2333/ConnectCore"
Repository = "https://github.com/zhongbai2333/ConnectCore"

[tool.setuptools.packages.find]
include = ["connect_core*"]

# ── Pytest ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

# ── Mypy ────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/", "Test Environment/"]

# ── Pyright ─────────────────────────────────────────────
[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
ignore = ["tests/", "Test Environment/"]
